# rusty_snake

./: .gitignore  Cargo.toml  README.md  scores-template.xml
src/: difficulty.rs  direction.rs  duration_formatter.rs  fruit.rs  future_holder.rs  main.rs  score_manager.rs  snake.rs
