[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Robin Friedli <rfriedli@tocco.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
ncurses = "5.99.0"
quick-xml = "0.17.1"
futures = "0.1.16"
completable_future = "0.1.0"
atomic_refcell = "0.1.5"