[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Robin Friedli <rfriedli@tocco.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16.1"
rand = "0.3.14"
stopwatch = "0.0.7"
quick-xml = "0.17.1"